# goose-khawrizm

./: .gitignore  CHANGELOG.md  LICENSE  PHASE5_IMPLEMENTATION_ROADMAP.md  QUICKSTART.md  README.md  SECURITY_FRAMEWORK.md  _config.yml  demo-pro.html  demo.html  extension.json  index.html  khawrizm_cli.py  pyproject.toml
.github/workflows/: ci.yml
config/: arabic_roots_extended.json
docs/: AI_SECURITY_PARADIGM_SHIFT.md  index.html
fundraising/: HACKERNEWS_POST.md
hardware/echowall_esp32/: CMakeLists.txt
hardware/echowall_esp32/main/: CMakeLists.txt  echowall.c
marketing/social/: twitter_thread.md
security/: __init__.py  cst_compliance.py  dlp_guardian.py  ipi_detector.py  zero_trust_ai.py
src/: __init__.py  echowall_api.py  sarc_processor.py  tools.py
tests/: test_arabic.py  test_security.py  test_sovereignty.py
